# ideal-barnacle

./: README.md  pyproject.toml  requirements.txt
src/: player.py
