[project]
name = "ideal-barnacle"
version = "0.1.0"
description = ""
authors = [
    {name = "S Alexandre",email = "alexandre.schortgen@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "nba-api (>=1.10.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
